--- a/Autobus/View/SeferGirişView.xaml
+++ b/Autobus/View/SeferGirişView.xaml
@@ -79,17 +79,20 @@
                         <Extensions:HourControl HourValue="{Binding Sefer.KalkışSaat, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
                     </UniformGrid>
                     <TextBlock Text="TAHMİNİ SÜRE SAAT" />
-                    <Extensions:NumericUpDownControl Minimum="0" SmallChange="1" Value="{Binding Sefer.TahminiSüre, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
+                    <Extensions:NumericUpDownControl Minimum="0" SmallChange="1"
+                        Value="{Binding Sefer.TahminiSüre, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
                     <TextBlock Text="BİLET TUTARI" />
                     <Extensions:NumericUpDownControl Minimum="0" ShowMode="CurrencyMode" SmallChange="1"
                         Value="{Binding Sefer.BiletTutarı, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
                     <TextBlock Text="TAHMİNİ VARIŞ SAATİ" />
-                    <TextBlock Text="{Binding Sefer.VarışZamanı, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" FontSize="16" Foreground="Red" />
+                    <TextBlock Text="{Binding Sefer.VarışZamanı, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
+                        FontSize="16" Foreground="Red" />
                     <Button Command="{Binding SeferEkle}" CommandParameter="{Binding Otobüs, Source={StaticResource MainViewModel}}">
                         <Button.Content>
                             <StackPanel Orientation="Horizontal">
                                 <TextBlock Text="SEFER EKLE" VerticalAlignment="Center" />
-                                <Image Width="32" Height="32" Source="/Resources/route.png" />
+                                <Image Width="32" Height="32"
+                                    Source="/Resources/route.png" />
                             </StackPanel>
                         </Button.Content>
                     </Button>
